--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Linux Process-Tree Viewer</title>
 
   <!-- Dependencies -->
@@ -9,49 +10,267 @@
   <script src="https://unpkg.com/vis-network@9.1.2/dist/vis-network.min.js"></script>
   <script src="https://unpkg.com/elkjs@0.7.1/lib/elk.bundled.js"></script>
 
-  <!-- Minimal macOS-style theme -->
+  <!-- Responsive macOS-style theme -->
   <style>
-    :root{--bg:#f2f2f7;--sidebar:#ffffffd2;--header:#fbfbfdcc;--border:#d9d9e0;
-          --mono:#636366;--blue:#0a84ff;--orange:#ff8f28;--yellow:#ffd964;--red:#ff453a}
-    *{box-sizing:border-box;margin:0;padding:0}
-    body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
-         background:var(--bg);height:100vh;display:flex;flex-direction:column;color:#1c1c1e}
-    header{display:flex;align-items:center;gap:1rem;padding:.65rem 1.25rem;
-           backdrop-filter:blur(14px);background:var(--header);border-bottom:1px solid var(--border)}
-    header .title{font-size:1.25rem;font-weight:600}
-    header input[type=file]{display:none}
-    label.file-btn{padding:.45rem .9rem;border:1px solid var(--border);border-radius:10px;background:#fff;cursor:pointer}
-    #searchInput{flex:0 0 240px;padding:.45rem .9rem;border:1px solid var(--border);border-radius:10px;background:#fff}
+    :root {
+      --bg: #f2f2f7;
+      --sidebar: #ffffffd2;
+      --header: #fbfbfdcc;
+      --border: #d9d9e0;
+      --mono: #636366;
+      --blue: #0a84ff;
+      --orange: #ff8f28;
+      --yellow: #ffd964;
+      --red: #ff453a;
+    }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      background: var(--bg);
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      color: #1c1c1e;
+      font-size: clamp(14px, 3vw, 16px);
+    }
+    header {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      gap: 0.75rem;
+      padding: 0.5rem 1rem;
+      backdrop-filter: blur(14px);
+      background: var(--header);
+      border-bottom: 1px solid var(--border);
+    }
+    header .title {
+      font-size: clamp(1rem, 5vw, 1.25rem);
+      font-weight: 600;
+    }
+    header input[type=file] {
+      display: none;
+    }
+    label.file-btn {
+      padding: 0.4rem 0.8rem;
+      border: 1px solid var(--border);
+      border-radius: 8px;
+      background: #fff;
+      cursor: pointer;
+      font-size: clamp(12px, 2.5vw, 14px);
+      touch-action: manipulation;
+    }
+    #searchInput {
+      flex: 1;
+      min-width: 120px;
+      padding: 0.4rem 0.8rem;
+      border: 1px solid var(--border);
+      border-radius: 8px;
+      background: #fff;
+      font-size: clamp(12px, 2.5vw, 14px);
+    }
 
-    #layout{flex:1;display:flex;min-height:0}
-    #network{flex:3;min-width:0}
-    #details{flex:1;min-width:260px;overflow-y:auto;padding:1.25rem;background:var(--sidebar);
-             border-left:1px solid var(--border);backdrop-filter:blur(28px)}
-    #details h3{font-size:1.1rem;font-weight:600;margin-bottom:.25rem}
-    #details .pid-badge{font-size:.8rem;color:var(--mono)}
-    #details dt{font-weight:600;margin-top:.45rem;font-size:.83rem;color:#3a3a3c}
-    #details dd{margin:.1rem 0 .5rem .1rem;word-break:break-word;font-size:.83rem}
-    #details code{font-family:"SF Mono",Consolas,Menlo,monospace;background:#f6f6f8;border-radius:6px;
-                 padding:2px 5px;color:#1c1c1e}
-    details.event-group{margin-top:1rem}details.event-group summary{cursor:pointer;font-weight:600}
-    ul{margin-left:1.1rem;list-style:circle;font-size:.83rem}
+    #layout {
+      flex: 1;
+      display: flex;
+      min-height: 0;
+      flex-direction: row;
+    }
+    #network {
+      flex: 3;
+      min-width: 0;
+      height: 100%;
+    }
+    #details {
+      flex: 1;
+      min-width: 220px;
+      max-height: 100%;
+      overflow-y: auto;
+      padding: 1rem;
+      background: var(--sidebar);
+      border-left: 1px solid var(--border);
+      backdrop-filter: blur(28px);
+      transition: transform 0.3s ease;
+    }
+    #details-toggle {
+      display: none;
+      position: fixed;
+      bottom: 4.5rem;
+      right: 1rem;
+      padding: 0.5rem 1rem;
+      background: var(--blue);
+      color: #fff;
+      border-radius: 8px;
+      cursor: pointer;
+      z-index: 1000;
+      touch-action: manipulation;
+    }
+    #details h3 {
+      font-size: clamp(0.9rem, 3vw, 1.1rem);
+      font-weight: 600;
+      margin-bottom: 0.25rem;
+    }
+    #details .pid-badge {
+      font-size: clamp(10px, 2vw, 12px);
+      color: var(--mono);
+    }
+    #details dt {
+      font-weight: 600;
+      margin-top: 0.4rem;
+      font-size: clamp(11px, 2.2vw, 13px);
+      color: #3a3a3c;
+    }
+    #details dd {
+      margin: 0.1rem 0 0.4rem 0.1rem;
+      word-break: break-word;
+      font-size: clamp(11px, 2.2vw, 13px);
+    }
+    #details code {
+      font-family: "SF Mono", Consolas, Menlo, monospace;
+      background: #f6f6f8;
+      border-radius: 6px;
+      padding: 2px 5px;
+      color: #1c1c1e;
+    }
+    details.event-group {
+      margin-top: 0.8rem;
+    }
+    details.event-group summary {
+      cursor: pointer;
+      font-weight: 600;
+      font-size: clamp(11px, 2.2vw, 13px);
+    }
+    ul {
+      margin-left: 1rem;
+      list-style: circle;
+      font-size: clamp(11px, 2.2vw, 13px);
+    }
 
     /* Timeline bar */
-    footer{padding:.5rem 1.25rem;border-top:1px solid var(--border);background:var(--header);
-           backdrop-filter:blur(14px);display:flex;align-items:center;gap:.75rem}
-    #timeSlider{flex:1;width:100%}
-    #timeLabel{font-size:.85rem;color:var(--mono);min-width:140px;text-align:right}
+    footer {
+      padding: 0.5rem 1rem;
+      border-top: 1px solid var(--border);
+      background: var(--header);
+      backdrop-filter: blur(14px);
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+    #timeSlider {
+      flex: 1;
+      width: 100%;
+      height: 8px;
+      touch-action: pan-x;
+    }
+    #timeLabel {
+      font-size: clamp(10px, 2vw, 12px);
+      color: var(--mono);
+      min-width: 120px;
+      text-align: right;
+    }
 
     /* Loading overlay */
-    #overlay{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;
-             background:rgba(249,249,251,.6);backdrop-filter:blur(4px);font-size:1.05rem;color:var(--mono);
-             z-index:999;visibility:hidden}
-    .spinner{width:28px;height:28px;border:4px solid var(--blue);border-top-color:transparent;border-radius:50%;
-             margin-right:.9rem;animation:spin 1s linear infinite}@keyframes spin{to{transform:rotate(360deg)}}
-    .vis-network{background:transparent}
-    .tag{display:inline-block;font-size:.65rem;font-weight:600;padding:2px 6px;border-radius:4px;color:#fff;margin-right:.35rem}
-    .read{background:var(--blue)}
-    .write{background:var(--orange)}.unknown{background:var(--mono)}
+    #overlay {
+      position: fixed;
+      inset: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(249,249,251,.6);
+      backdrop-filter: blur(4px);
+      font-size: clamp(0.9rem, 3vw, 1.05rem);
+      color: var(--mono);
+      z-index: 999;
+      visibility: hidden;
+    }
+    .spinner {
+      width: 24px;
+      height: 24px;
+      border: 4px solid var(--blue);
+      border-top-color: transparent;
+      border-radius: 50%;
+      margin-right: 0.8rem;
+      animation: spin 1s linear infinite;
+    }
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
+    .vis-network {
+      background: transparent;
+    }
+    .tag {
+      display: inline-block;
+      font-size: clamp(9px, 2vw, 10px);
+      font-weight: 600;
+      padding: 2px 5px;
+      border-radius: 4px;
+      color: #fff;
+      margin-right: 0.3rem;
+    }
+    .read {
+      background: var(--blue);
+    }
+    .write {
+      background: var(--orange);
+    }
+    .unknown {
+      background: var(--mono);
+    }
+
+    /* Responsive styles */
+    @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0.75rem;
+      }
+      header .title, label.file-btn, #searchInput {
+        width: 100%;
+      }
+      #layout {
+        flex-direction: column;
+      }
+      #network {
+        flex: none;
+        height: 50vh;
+        min-height: 300px;
+      }
+      #details {
+        flex: none;
+        max-height: none;
+        transform: translateX(100%);
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        width: 80%;
+        max-width: 300px;
+        z-index: 998;
+      }
+      #details.visible {
+        transform: translateX(0);
+      }
+      #details-toggle {
+        display: block;
+      }
+      footer {
+        flex-wrap: wrap;
+        padding: 0.5rem;
+      }
+      #timeSlider {
+        order: 1;
+        width: 100%;
+      }
+      #timeLabel {
+        order: 2;
+        width: 100%;
+        text-align: center;
+        margin-top: 0.5rem;
+      }
+    }
   </style>
 </head>
 <body>
@@ -73,6 +292,7 @@
 </footer>
 
 <div id="overlay"><div class="spinner"></div><span id="overlayText">Loading…</span></div>
+<button id="details-toggle">Details</button>
 
 <script>
 /* --- Config & Helpers --- */
@@ -89,7 +309,7 @@ const basename=p=>p?.split('/').pop()||'';
 /* DOM References */
 const netDiv=$('network'),details=$('details'),overlay=$('overlay'),overlayTxt=$('overlayText'),
       fileInput=$('fileInput'),searchInput=$('searchInput'),
-      slider=$('timeSlider'),timeLabel=$('timeLabel');
+      slider=$('timeSlider'),timeLabel=$('timeLabel'),detailsToggle=$('details-toggle');
 
 let network,nodesDS,edgesDS,procMap=new Map(),nodeTime=new Map(),edgeTime=new Map(),
     minTs=Infinity,maxTs=-Infinity;
@@ -97,6 +317,12 @@ let network,nodesDS,edgesDS,procMap=new Map(),nodeTime=new Map(),edgeTime=new Ma
 /* Overlay Helpers */
 const show=txt=>{overlayTxt.textContent=txt;overlay.style.visibility='visible'};
 const hide=()=>overlay.style.visibility='hidden';
+
+/* Details Toggle */
+detailsToggle.addEventListener('click', () => {
+  details.classList.toggle('visible');
+  detailsToggle.textContent = details.classList.contains('visible') ? 'Hide' : 'Details';
+});
 
 /* Worker Script */
 const workerScript = `
@@ -291,7 +517,7 @@ async function buildGraph() {
         ? ROOT
         : `${p.meta?.binary?.split('/').pop() || id.slice(0, 8)}\nPID ${p.meta?.pid ?? '?'}`,
       shape: root ? 'ellipse' : 'box',
-      font: { multi: 'html', bold: root },
+      font: { multi: 'html', bold: root, size: window.innerWidth < 768 ? 12 : 14 },
       borderRadius: 12,
       widthConstraint: { minimum: w },
       color: root ? rootCol() : hasF ? fileCol() : normCol(),
@@ -336,9 +562,17 @@ async function buildGraph() {
       physics: !USE_ELK,
       layout: USE_ELK
         ? undefined
-        : { hierarchical: { direction: 'LR', levelSeparation: 100, nodeSpacing: 120 } },
+        : { hierarchical: { direction: 'LR', levelSeparation: 100, nodeSpacing: window.innerWidth < 768 ? 80 : 120 } },
       edges: { smooth: false },
-      interaction: { hover: true, navigationButtons: true, keyboard: true }
+      interaction: {
+        hover: true,
+        navigationButtons: true,
+        keyboard: true,
+        zoomView: true,
+        dragView: true,
+        multiselect: false,
+        touchSensitivity: 10
+      }
     }
   );
 
@@ -351,6 +585,10 @@ async function buildGraph() {
     showDetails(id);
     refreshColors();
     paintPath(id);
+    if (window.innerWidth < 768) {
+      details.classList.add('visible');
+      detailsToggle.textContent = 'Hide';
+    }
   });
   network.on('deselectNode', clearPath);
 
